--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -11,7 +11,7 @@
     </ion-tab-button>
 
     <ion-tab-button tab="favorites">
-      <ion-icon name="star"></ion-icon>
+      <ion-icon name="heart"></ion-icon>
       <ion-label>Favorites</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
