Tab bar fix + "About" Re-design

--- a/src/app/about/about.page.html
+++ b/src/app/about/about.page.html
@@ -8,6 +8,9 @@
   <div class="about-content">
     <h2>Bienvenue sur mon application !</h2>
     <p>Cette application vous permet de suivre les courses et les pilotes.</p>
-    <p>Réalisé par Lilyan Muller / BUT Informatique</p>
+    <p>Réalisé par <strong>Lilyan Muller</strong> / BUT Informatique</p>
+    <ion-button expand="full" color="primary" (click)="contact()"
+      >Contactez-moi</ion-button
+    >
   </div>
 </ion-content>
